Working on integrating cref table

--- a/MapParser/MapViewer.csproj
+++ b/MapParser/MapViewer.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cref.cs" />
     <Compile Include="DwarfParser.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
