--- a/MapParser/MapViewer.csproj
+++ b/MapParser/MapViewer.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SymParser.cs" />
+    <Compile Include="TreemapViewColoringMode.cs" />
+    <Compile Include="TreemapViewColoring.cs" />
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +109,9 @@
     <Content Include="favicon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="cmdwtf.Treemap">
+      <Version>1.1.3</Version>
+    </PackageReference>
     <PackageReference Include="ObjectListView.Official">
       <Version>2.9.1</Version>
     </PackageReference>
